--- a/prometheus/prom-deploy.yaml
+++ b/prometheus/prom-deploy.yaml
@@ -26,6 +26,10 @@ spec:
       labels:
         app: prometheus
     spec:
+      hostAliases:
+       - ip: 10.1.1.201
+         hostnames:
+         - burnydha.duckdns.org
       containers:
       - name: prometheus-cont
         #image: prom/prometheus:v2.17.2
