--- a/grafana/grafana.yaml
+++ b/grafana/grafana.yaml
@@ -2,29 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: monitoring
-  annotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port:   '9090'
-  creationTimestamp: null
-  generation: 1
   labels:
     app: grafana
   name: grafana
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: grafana
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: grafana
     spec:
@@ -32,14 +19,14 @@ spec:
       - envFrom:
         - secretRef:
             name: grafana-creds
-        image: docker.io/grafana/grafana:5.3.2
-        imagePullPolicy: IfNotPresent
+        image: docker.io/grafana/grafana:7.3.3
         name: grafana
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
+        volumeMounts:
+          - name: data-dir
+            mountPath: /var/lib/grafana/
+      securityContext:
+        fsGroup: 472
+      volumes:
+       - name: data-dir
+         persistentVolumeClaim:
+           claimName: graf-data-dir-pvc
