--- a/grafana/pvc.yaml
+++ b/grafana/pvc.yaml
@@ -3,10 +3,37 @@ kind: PersistentVolumeClaim
 
 metadata:
   name: graf-data-dir-pvc
+  namespace: monitoring
+  labels:
+    app: grafana
 
 spec:
+  storageClassName: nfs-local
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
+---
+
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: grafana-pv
+  namespace: monitoring
+spec:
+  capacity:
+    storage: 20Gi 
+  accessModes:
+  - ReadWriteOnce 
+  local: 
+    path: /media/k8s/graf/
+  storageClassName: nfs-local
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - node3
