--- a/prometheus/prometheus-config-map.yml
+++ b/prometheus/prometheus-config-map.yml
@@ -11,6 +11,16 @@ data:
       scrape_interval: 5s
       evaluation_interval: 5s
 
+    rule_files:
+        - /etc/prometheus/rules.yml
+
+    alerting:
+      alertmanagers:
+      - static_configs:
+        - targets:
+          - '10.1.1.222:31000'
+      
+
     scrape_configs:
       - job_name: 'node-exporter'
         static_configs:
@@ -121,3 +131,27 @@ data:
         scheme: https
         static_configs:
           - targets: ['burnydha.duckdns.org:8123']
+
+--- 
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: rules-config
+  labels:
+    name: rules-config
+  namespace: monitoring
+data:
+  rules.yml: |-
+    groups:
+      - name: AllInstances
+        rules:
+          - alert: InstanceDown
+            #expr: up == 0
+            expr: up{job="node-exporter"} == 0
+            for: 1m
+            annotations:
+              title: 'Instance {{ $labels.instance }} down'
+              description: '{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minute.'
+            labels:
+              severity: 'critical'
