Added more to the rules list

--- a/prometheus/prometheus-config-map.yml
+++ b/prometheus/prometheus-config-map.yml
@@ -24,7 +24,7 @@ data:
     scrape_configs:
       - job_name: 'node-exporter'
         static_configs:
-        - targets: ['10.1.1.220:9100', '10.1.1.221:9100', '10.1.1.222:9100']
+        - targets: ['10.1.1.220:9100', '10.1.1.221:9100', '10.1.1.222:9100', '192.168.2.100:9100']
 
       - job_name: 'kubernetes-nodes'
         kubernetes_sd_configs:
@@ -147,7 +147,6 @@ data:
       - name: AllInstances
         rules:
           - alert: InstanceDown
-            #expr: up == 0
             expr: up{job="node-exporter"} == 0
             for: 1m
             annotations:
@@ -155,3 +154,22 @@ data:
               description: '{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minute.'
             labels:
               severity: 'critical'
+          
+          - alert: HostOutOfMemory
+            expr: node_memory_MemAvailable{job="node-exporter"} / node_memory_MemTotal{job="node-exporter"} * 100 < 10
+            for: 5m
+            labels:
+              severity: 'critical'
+            annotations:
+              title: 'Host out of memory Instance {{ $labels.instance }}'
+              description: 'Node memory is filling up (< 10% left)\n VALUE = {{ $value }}\n LABELS: {{ $labels }}'
+
+          - alert: HostOutOfDiskSpace
+            expr: node_filesystem_free{job="node-exporter", mountpoint="/", fstype="ext4"} / node_filesystem_size * 100 < 10
+            for: 1m
+            labels:
+              severity: 'critical'
+            annotations:
+              title: 'Host out of disk space instance {{ $labels.instance }}'
+              description: 'Node HostOutOfDiskSpace is filling up (< 10% left)\n VALUE = {{ $value }}\n LABELS: {{ $labels }}'
+
