--- a/prometheus/prometheus-config-map.yml
+++ b/prometheus/prometheus-config-map.yml
@@ -50,7 +50,7 @@ data:
 
         kubernetes_sd_configs:
         - role: pod
-        scheme: https
+        scheme: http
         tls_config:
           ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
